src/objects/OneSTOPComment__c.object
<CustomObject>
    <fields>
        <fullName>Comment1__c</fullName>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1STOP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>1STOP</label>
        <referenceTo>One_Stop__c</referenceTo>
        <relationshipName>X1STOPComments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>1STOPComment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>1STOPComment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>1STOPComments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>